--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "handlebars": "^4.7.8",
+    "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
+    "seed": "^0.4.4",
     "sequelize": "^6.37.3"
   }
 }
