added .env to .gitignore, commented out the session cookie in server.js file until we add the newsequeized function in the enviroment

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "seed": "^0.4.4",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "start": "^5.1.0"
   }
 }
