--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
+    "exphbs": "^1.2.0",
     "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "handlebars": "^4.7.8",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
+    "qrcode": "^1.5.3",
     "seed": "^0.4.4",
     "sequelize": "^6.37.3",
     "start": "^5.1.0"
