--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
   "name": "ecolabels",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A web-based application for creating educational plaques for animals and insects.",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "seed": "node seeds/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "connect-session-sequelize": "^7.1.7",
-    "dotenv": "^16.4.5",
-    "exphbs": "^1.2.0",
-    "express": "^4.19.2",
-    "express-handlebars": "^7.1.2",
-    "express-session": "^1.18.0",
-    "handlebars": "^4.7.8",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.9.7",
-    "qrcode": "^1.5.3",
-    "seed": "^0.4.4",
-    "sequelize": "^6.37.3",
-    "start": "^5.1.0"
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.4",
+    "express-session": "^1.17.2",
+    "multer": "^1.4.3",
+    "mysql2": "^2.2.5",
+    "qrcode": "^1.4.4",
+    "sequelize": "^6.6.5"
   }
 }
