--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.3",
     "mysql2": "^2.2.5",
     "qrcode": "^1.4.4",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "three.js": "^0.77.1"
   }
 }
