--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "seed": "node seeds/index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "connect-session-sequelize": "^7.1.2",
+    "bcrypt": "^5.1.1",
+    "connect-session-sequelize": "^7.1.7",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.3.4",
-    "express-session": "^1.17.2",
+    "express": "^4.19.2",
+    "express-handlebars": "^5.3.5",
+    "express-session": "^1.18.0",
     "multer": "^1.4.3",
-    "mysql2": "^2.2.5",
-    "qrcode": "^1.4.4",
-    "sequelize": "^6.6.5",
-    "three.js": "^0.77.1"
+    "mysql2": "^2.3.3",
+    "qrcode": "^1.5.3",
+    "sequelize": "^6.37.3",
+    "three.js": "^0.77.1",
+    "xmldom": "^0.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
